--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mighty Ducks Hockey League</title>
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 
@@ -19,38 +19,39 @@
         </div>
 
         <div class="bar-and-logo">
-            <h2> Upcoming Events </h2>
-            <img src="assets/Logo_Mighty_ducks-01.png" class="logo" width="150" alt="logo mighty ducks">
-
-        </div>
+            <img src="./assets/Logo_Mighty_ducks-01.png" class="logo" alt="logo mighty ducks">
+            <h2>Contact Us</h2>                  
+        </div> 
 
     </div>
 </header>
 
 <main>
 
-    <section class="wrapper">
-
+    <div class="wrapper">
+                  
         <div class="nav">
-            <nav>
-                <a href="/home.html">Home</a>
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
-            </nav>
+            <nav> 
+            <a href="./Index.html">Home</a>
+            <a href="./about_MDHL.html">About</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./game_info.html">Schedule</a>
+            <a href="./rules.html">Rules & Policies</a>
+        </nav>
 
         </div>
 
-        <img src="assets/img/hockey_3.jpg" alt="Hockey image" class="bgsection">
+        <img src="./assets/img/hockey_3.jpg" alt="Hockey image" class="bgsection">
 
         <div class="pdata">
             <article>
-                     <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a>
-                    We reply to your email as soon as we can.</p>
+                     <h4>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a>
+                    We reply to your email as soon as we can.</h4>
             </article>
 
             
         </div>
-    </section>
+    </div>
 
 </main>
 </body>
