--- a/Index.html
+++ b/Index.html
@@ -30,16 +30,19 @@
  
     <div class="wrapper">
 
-          <div class="nav">
-            <nav> 
-            <a href="./Index.html">Home</a>
-            <a href="./about_MDHL.html">About</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./game_info.html">Schedule</a>
-            <a href="./rules.html">Rules & Policies</a>
-        </nav>
+        <div class="nav">
+            <nav>
+                <a href="./Index.html">Home</a>
+                <a href="./about_MDHL.html">About</a>
+                <a href="./contact.html">Contact</a>
+                <a href="./game_info.html">Schedule</a>
+                <a href="./rules.html">Rules & Policies</a>
+                <a href="./form.html">Registration Form</a>
+            </nav>
 
-    </div>
+         </div>
+
+    
 
         <img src="./assets/img/hockey_1.jpg" alt="Hockey image" class="bgsection">
   
