--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -37,8 +37,9 @@
                 <a href="./contact.html">Contact</a>
                 <a href="./game_info.html">Schedule</a>
                 <a href="./rules.html">Rules & Policies</a>
+                <a href="./form.html">Registration Form</a>
             </nav>
-
+        </div>
 
             <img src="./assets/img/hockey_2.jpg" alt="Hockey image" class="bgsection">
 
@@ -68,7 +69,7 @@
             </div>
         </div>
    
-    </div>
+
 
 </main>
 </body>
