--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,14 @@
     <div class="wrapper">
                   
         <div class="nav">
-            <nav> 
-            <a href="./Index.html">Home</a>
-            <a href="./about_MDHL.html">About</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./game_info.html">Schedule</a>
-            <a href="./rules.html">Rules & Policies</a>
-        </nav>
+            <nav>
+                <a href="./Index.html">Home</a>
+                <a href="./about_MDHL.html">About</a>
+                <a href="./contact.html">Contact</a>
+                <a href="./game_info.html">Schedule</a>
+                <a href="./rules.html">Rules & Policies</a>
+                <a href="./form.html">Registration Form</a>
+            </nav>
 
         </div>
 
