--- a/rules.html
+++ b/rules.html
@@ -37,6 +37,7 @@
                     <a href="./contact.html">Contact</a>
                     <a href="./game_info.html">Schedule</a>
                     <a href="./rules.html">Rules & Policies</a>
+                    <a href="./form.html">Registration Form</a>
                 </nav>
             </div>
 
@@ -44,24 +45,25 @@
 
 
             <article class="pdata">
-                
-                    <h4>
-                        Mighty Ducks Hockey League
-                        <br>
-                        RULES OF PLAY & POLICIES
-                    </h4>
 
-                    <sub>IHF rules shall govern MDHL play except as modified herein.</sub>
+                <h4>
+                    Mighty Ducks Hockey League
                     <br>
+                    RULES OF PLAY & POLICIES
+                </h4>
 
-                    <ul>
-                        <h4>Sportsmanship</h4>
-                        <li>The common interest that members of the Association share is to inspire
-                            youth to practice the ideals of sportsmanship and fair play. Any player, coach,
-                            team, parent, spectator, administrator or referee whose behavior detracts from
-                            this purpose is subject to disciplinary action regardless of technical hockey
-                            background, expertise, accomplishments or standing.</li>
-                        <br>
+                <sub>IHF rules shall govern MDHL play except as modified herein.</sub>
+                <br>
+                <h4>Sportsmanship</h4>
+                <ul>
+
+                    <li> The common interest that members of the Association share is to inspire
+                        youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+                        team, parent, spectator, administrator or referee whose behavior detracts from
+                        this purpose is subject to disciplinary action regardless of technical hockey
+                        background, expertise, accomplishments or standing.</li>
+
+                    <li>
                         <h4>IHF FIELD REGULATIONS</h4>
                         <ol>
                             <li>
@@ -93,18 +95,21 @@
                             </li>
 
                         </ol>
-                        <ul>
-                            <h5>ALL-PLAY</h5>
-                            <ul>All-play means that every recreation player on every team shall play atleast 
-                                fifty percent of each game. Coaches in the competition program are encouraged
-                                to play their players 50% of each game</ul>
-                            <li>A Coach shall be permitted to not play a player 50% of each game
-                                under special circumstances, e.g., unexcused absences from practice
-                                and/or games, ungentlemanly conduct at practice and/or games, and
-                                injuries. </li>
-                        </ul>
+                    </li>
+                    <li>
+                        <h5>ALL-PLAY</h5>
+                    </li>
 
-                    </ul>
+                    <li>All-play means that every recreation player on every team shall play atleast
+                        fifty percent of each game. Coaches in the competition program are encouraged
+                        to play their players 50% of each game</li>
+                    <li>A Coach shall be permitted to not play a player 50% of each game
+                        under special circumstances, e.g., unexcused absences from practice
+                        and/or games, ungentlemanly conduct at practice and/or games, and
+                        injuries. </li>
+                    
+
+                </ul>
             </article>
 
 
